<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">APOD</string>
    <string name="apod">Astronomy Picture Of The Day (APOD)</string>
    <string name="menu_set_date">Set Date</string>
    <string name="menu_about">About</string>
    <string name="menu_today">Today</string>
    <string name="about">Copyright  Philippe Chretien - www.basbrun.com</string>
    <string name="loading">Loading</string>
    <string name="loading_your">Loading your APOD </string>
    <string name="menu_previous">Previous</string>
    <string name="menu_next">Next</string>
    <string name="menu_settings">Preferences</string>
    <string name="menu_search">Search</string>
    <string name="search_hint">Search APOD Archive</string>
    <string name="search_results_for">Search results for: </string>
    <string name="search_unknown_query">Unknown Query</string>
    <string name="searching">Searching</string>
    <string name="quit">Quit</string>
    <string name="really_quit">Do you really want to quit?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="connection_error">Connection error! Make sure you are connected to the internet!</string>

</resources>