<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent" 
    android:layout_height="fill_parent">	
	<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:orientation="vertical" >	
	    
	    <LinearLayout 
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:layout_marginLeft="0dp"
	        android:layout_marginRight="0dp">
	        <Button
	            android:id="@+id/button_prev"
		        android:layout_width="fill_parent"
		        android:layout_height="wrap_content"
		        android:layout_weight="1"
		        android:text="@string/menu_previous" />
	        <Button
	            android:id="@+id/button_today"
		        android:layout_width="fill_parent"
		        android:layout_height="wrap_content"
		        android:layout_weight="1"
		        android:text="@string/menu_today" />
	        <Button
	            android:id="@+id/button_next"
		        android:layout_width="fill_parent"
		        android:layout_height="wrap_content"
		        android:layout_weight="1"
		        android:text="@string/menu_next" />
	    </LinearLayout>	
	    <ImageView
	        android:id="@+id/imageViewAPOD"
	        android:layout_width="fill_parent"
	        android:layout_height="fill_parent"
	        android:adjustViewBounds="true"
	        android:src="@android:drawable/picture_frame" />
	    
	   <WebView
	        android:id="@+id/webViewDescription"
	        android:layout_width="fill_parent"
	        android:layout_height="fill_parent" />
	
	</LinearLayout>
</ScrollView>